mule-user-guide/v/3.6/choosing-mel-or-ctl2-as-scripting-engine.adoc
= Choosing Between MEL and CTL2 for DataMapper Scripting
:keywords: datamapper

[NOTE]
DataMapper will continue to be fully supported in all current and future versions of Mule ESB 3.x, however it will be removed in Mule 4.0. We recommend that if you wish to take advantage of the new capabilities of link:https://developer.mulesoft.com/docs/display/current/DataWeave[DataWeave] or if you start new projects, upgrade now. However, if you have no pressing need to take advantage of new functionality, we recommend you wait until Mule 4.0 is released.


The transformation code for Anypoint DataMapper element mappings can be generated in one of two languages: Mule Expression Language (MEL) or CTL2 (Clover Transformation Language). 

As of Mule 3.4, MEL is the default language. MEL offers a number of technical advantages over CTL2:

* MEL can call out to any Java library. For example, you have the usual Java string and mathematical functions available, as well as any Java library you include in your project.

* MEL is used throughout the rest of Mule as the primary expression language, so using it in DataMapper makes for an experience more consistent with the rest of Mule ESB.

* MEL is being actively developed with new capabilities to continue to expose Mule features.

Mule recommends that you use MEL rather than CTL2 for future DataMapper development.

CTL2 was licensed from a third party for use in past versions of DataMapper, and is still fully supported for reasons of backward compatibility, but it offers no functional advantages over MEL.  Note, when using MEL in DataMapper, the Mule message object is not available for use.

The images below illustrate DataMapper's link:/documentation/display/current/DataMapper+Visual+Reference#DataMapperVisualReference-OverviewoftheScriptView[Script view] displaying the same mapping, in CTL2 (below, at top) and MEL (below, at bottom.

image:1-MEL.png[1-MEL]

image:2-CTL2.png[2-CTL2]

== Setting the DataMapper Scripting Language Preference

By default, Studio uses MEL as DataMapper's scripting engine. However, you can change this setting if you wish to use CTL2 as the default.

. In Studio, navigate to *Preferences* > *Anypoint Studio* > *DataMapper.*

. Use the drop-down for the *Default Script Type* field to select `CTL`.
+
image:3-setting.png[3-setting]

. Click *OK* to save your changes.

== See Also

* For complete information on MEL, see  link:/documentation/display/current/Mule+Expression+Language+MEL[Mule Expression Language].  

* For complete information on CTL syntax and capabilities, including a language and functions reference, download the link:/documentation/download/attachments/123700664/Mule+ESB+and+Studio+-+Datamapper+CTL2+Reference.pdf?version=1&modificationDate=1423767613086[Mule Datamapper CTL2 Reference].
